fixes text overflow issue for connectivity view

--- a/src/groups/RouteNetworkDiagram/ConnectivityView/ConnectivityView.scss
+++ b/src/groups/RouteNetworkDiagram/ConnectivityView/ConnectivityView.scss
@@ -3,6 +3,7 @@
 .connectivity-view {
   padding: 20px;
   overflow: auto;
+  font-size: 14px;
 }
 
 .connectivity-view-container {
@@ -15,7 +16,6 @@
 }
 
 .connectivity-view__title {
-  font-size: 16px;
   font-weight: bold;
   padding: 10px;
   padding-right: 50px;
